Revise index.html for improved layout and design
Updated the structure and styling of the HTML document, including changes to the header, main content sections, and footer.

--- a/index.html
+++ b/index.html
@@ -2,54 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>A Level Computer Science – Learning Hub</title>
+    <title>Computer Science Learning Hub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
         body {
             margin: 0;
             font-family: "Segoe UI", Arial, sans-serif;
-            background: #f3f5f8;
+            background: #f4f6f8;
             color: #333;
         }
 
         header {
-            background: linear-gradient(135deg, #232526, #414345);
+            background: linear-gradient(135deg, #1e3c72, #2a5298);
             color: white;
-            padding: 40px 20px;
+            padding: 30px 20px;
             text-align: center;
         }
 
         header h1 {
             margin: 0;
-            font-size: 2.5em;
+            font-size: 2.2em;
         }
 
         header p {
-            margin-top: 10px;
+            margin-top: 8px;
             font-size: 1.1em;
             opacity: 0.9;
         }
 
         main {
-            max-width: 1200px;
+            max-width: 1100px;
             margin: auto;
-            padding: 25px;
+            padding: 20px;
         }
 
         section {
             background: white;
-            margin-bottom: 28px;
-            padding: 24px;
-            border-radius: 10px;
-            box-shadow: 0 6px 16px rgba(0,0,0,0.08);
+            margin-bottom: 25px;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.06);
         }
 
         section h2 {
-            margin-top: 0;
-            color: #232526;
-            border-left: 6px solid #6c757d;
+            border-left: 5px solid #2a5298;
             padding-left: 12px;
+            color: #1e3c72;
+            margin-top: 0;
         }
 
         ul {
@@ -59,29 +59,29 @@
         }
 
         li {
-            margin: 9px 0;
+            margin: 8px 0;
         }
 
         a {
             text-decoration: none;
-            color: #495057;
+            color: #2a5298;
             font-weight: 500;
         }
 
         a:hover {
             text-decoration: underline;
-            color: #212529;
+            color: #1e3c72;
         }
 
         footer {
-            background: #e9ecef;
             text-align: center;
             padding: 15px;
+            background: #e9ecf1;
             font-size: 0.9em;
             color: #555;
         }
 
-        @media (max-width: 800px) {
+        @media (max-width: 700px) {
             ul {
                 columns: 1;
             }
@@ -92,97 +92,80 @@
 <body>
 
 <header>
-    <h1>A Level Computer Science</h1>
-    <p>AS • A2 • Programming • Logic • Advanced Topics</p>
+    <h1>Computer Science Learning Hub</h1>
+    <p>Notes • Assessments • Practical Work • Tests</p>
 </header>
 
 <main>
 
     <section>
-        <h2>📘 Core AS / Year 12 Topics</h2>
+        <h2>📘 Core Computer Science Topics</h2>
         <ul>
-            <li><a href="12-Data-Representation1.html">Data Representation</a></li>
-            <li><a href="data-representation-y12.html">Data Representation – Year 12</a></li>
-            <li><a href="12-System-Software1.html">System Software</a></li>
-            <li><a href="12-Hardware-Virtual-Machines.html">Hardware & Virtual Machines</a></li>
-            <li><a href="15-1-processor-fundamentals.html">Processor Fundamentals</a></li>
-            <li><a href="12-Security.html">Security</a></li>
-            <li><a href="17-security.html">Security – Advanced</a></li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>🌐 Communication & Internet Technologies</h2>
-        <ul>
-            <li><a href="communication-internet-tech.html">Communication & Internet Technologies</a></li>
-            <li><a href="12-Communication-Internet-Tech1.html">Internet Technologies – Lesson</a></li>
-            <li><a href="communication-internet-tech-bookquestions.html">Book Questions</a></li>
-            <li><a href="communication-internet-tech-assessment.html">Assessment</a></li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>🖥️ Hardware & System Software</h2>
-        <ul>
-            <li><a href="Hardware and Virtual Machine.html">Hardware & Virtual Machines</a></li>
-            <li><a href="Hardware-assessment.html">Hardware – Assessment</a></li>
-            <li><a href="a2-system-software.html">A2 System Software</a></li>
-            <li><a href="software-development.html">Software Development</a></li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>🔢 Logic, Gates & Boolean Algebra</h2>
-        <ul>
-            <li><a href="LogicalGates.html">Logical Gates</a></li>
-            <li><a href="Boolean-Algebra2.html">Boolean Algebra</a></li>
-            <li><a href="logic-gates-boolean-algebra.html">Logic Gates & Boolean Algebra</a></li>
-            <li><a href="logicgates-booleanalgebra-assessment.html">Assessment</a></li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>💻 Programming & Data Structures</h2>
-        <ul>
+            <li><a href="as-1-information-representation.html">Information Representation</a></li>
+            <li><a href="as-2-communication.html">Communication</a></li>
+            <li><a href="as-3-hardware.html">Hardware</a></li>
+            <li><a href="as-4-processor-fundamentals.html">Processor Fundamentals</a></li>
+            <li><a href="as-5-system-software.html">System Software</a></li>
+            <li><a href="Computer-Architecture.html">Computer Architecture</a></li>
+            <li><a href="Data-Types-structure.html">Data Types & Structures</a></li>
             <li><a href="arraysnew.html">Arrays</a></li>
-            <li><a href="pythonArrays.html">Python Arrays</a></li>
-            <li><a href="queue.html">Queue</a></li>
-            <li><a href="stack.html">Stack</a></li>
-            <li><a href="oopdetailed.html">Object-Oriented Programming</a></li>
-            <li><a href="datafilesPython.html">Data Files – Python</a></li>
-            <li><a href="a2-java-prg-data-rep.html">Java Programming – Data Representation</a></li>
-            <li><a href="java-assessment.html">Java – Assessment</a></li>
+            <li><a href="ch-13-datatypes-structure.html">Chapter 13 – Data Types & Structures</a></li>
+            <li><a href="as-csc-chapter-12.html">Chapter 12 – CSC</a></li>
+            <li><a href="as-cs-chapter-13.html">Chapter 13 – CSC</a></li>
+            <li><a href="as-chapter14.html">Chapter 14</a></li>
         </ul>
     </section>
 
     <section>
-        <h2>🚀 Advanced A2 Topics</h2>
+        <h2>🧠 Algorithm Design & Problem Solving</h2>
         <ul>
-            <li><a href="18-Artificial-Intelligence.html">Artificial Intelligence</a></li>
-            <li><a href="19-computational-thinking.html">Computational Thinking</a></li>
-            <li><a href="20-further-programming.html">Further Programming</a></li>
-            <li><a href="ch-23-algorithms.html">Algorithms</a></li>
-            <li><a href="Chapter25_Programming_Paradigms_Ravi_Raju.html">Programming Paradigms</a></li>
-            <li><a href="Chap19-Practical.html"> Practical Chapter 19</a>a></li>
+            <li><a href="8-Algorithm-Design-Assessment.html">Algorithm Design – Assessment</a></li>
+            <li><a href="9-Prob-Solving-Prog-Assessment.html">Problem Solving & Programming – Assessment</a></li>
+            <li><a href="AS-ch8-prac.html">Chapter 8 – Practical</a></li>
+            <li><a href="AS-ch9-ProbSolving-Program.html">Chapter 9 – Problem Solving</a></li>
+            <li><a href="as-cs-alg-des-prob-solving.html">Algorithm Design & Problem Solving</a></li>
+            <li><a href="as-cs-alg-des-prob-assessment.html">Algorithm Design – Assessment</a></li>
         </ul>
     </section>
 
     <section>
-        <h2>📝 Practicals & Assessments</h2>
+        <h2>📂 File Handling & OOP (NEW)</h2>
         <ul>
-            <li><a href="A-level-practical1.html">A Level Practical – 1</a></li>
-            <li><a href="A-level-practical2.html">A Level Practical – 2</a></li>
-            <li><a href="data-representation-assessment.html">Data Representation – Assessment</a></li>
-            <li><a href="Practical-Chapter19.html">Practical – Computational Thinking</a></li>
+            <li><a href="FileHandling-Part1.html">File Handling – Concepts & Records</a></li>
+            <li><a href="File-Handling-ExamStyle.html">File Handling – Exam Style Questions</a></li>
+            <li><a href="Oops Part2.html">Object-Oriented Programming – Part 2</a></li>
+            <li><a href="OOPs-Exam-Style.html">OOP – Exam Style Questions</a></li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>📝 Assessments</h2>
+        <ul>
+            <li><a href="as-1-assessment.html">AS Level – Assessment 1</a></li>
+            <li><a href="as-2-assessment.html">AS Level – Assessment 2</a></li>
+            <li><a href="as-3-assessment.html">AS Level – Assessment 3</a></li>
+            <li><a href="as-4-assessment.html">AS Level – Assessment 4</a></li>
+            <li><a href="as-5-assessment.html">AS Level – Assessment 5</a></li>
+            <li><a href="database-assessment-7-12-2025.html">Database Assessment</a></li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>💻 Practical & Test Pages</h2>
+        <ul>
+            <li><a href="as-Csc-prac1.html">CSC Practical 1</a></li>
+            <li><a href="Hardware-test.html">Hardware Test</a></li>
+            <li><a href="ICT-Test-16-11-2025.html">ICT Test</a></li>
+            <li><a href="Test-November.html">November Test</a></li>
+            <li><a href="SpillOvers.html">Spill Overs</a></li>
         </ul>
     </section>
 
 </main>
 
 <footer>
-    © A Level Computer Science | Structured for mastery & depth
+    © Computer Science Teaching/Learning Resources | Designed with clarity & purpose
 </footer>
 
 </body>
 </html>
-
